--- a/samples/sampler/src/MoonstoneEnvironment/MoonstoneEnvironment.module.less
+++ b/samples/sampler/src/MoonstoneEnvironment/MoonstoneEnvironment.module.less
@@ -41,7 +41,7 @@
 	// storybook's structure to update that goofy rule to a rational one.
 	// The :not() bit targets only non-enact elements, so if a story doesn't use withInfo, and a
 	// `div` isn't added, the components aren't being told to be a different size/position.
-	.storyCell > div:not([class]):not([style]):first-child {
+	.storyCell > div:not([class]):first-child {
 		position: relative;
 		width: 100%;
 		height: 100%;
