--- a/samples/sampler/src/MoonstoneEnvironment/MoonstoneEnvironment.module.less
+++ b/samples/sampler/src/MoonstoneEnvironment/MoonstoneEnvironment.module.less
@@ -1,7 +1,7 @@
 // MoonstoneEnvironment.module.less
 //
-@import "~../../../../styles/variables.less";
-@import "~../../../../styles/mixins.less";
+@import "~@enact/moonstone/styles/variables.less";
+@import "~@enact/moonstone/styles/mixins.less";
 
 // from ~@enact/ui/styles/core.less. Can't import global mixins.
 .enact-selectable() {
