--- a/samples/sampler/stories/default/About.module.less
+++ b/samples/sampler/stories/default/About.module.less
@@ -1,5 +1,5 @@
-@import "~../../../../styles/colors.less";
-@import "~../../../../styles/variables.less";
+@import "~@enact/moonstone/styles/colors.less";
+@import "~@enact/moonstone/styles/variables.less";
 
 & {
 	@bg-color: @moon-spinner-ball1-color;
