Changed Main View to use React Hooks, fixed possible mistake in LESS file and resolved the problem.

--- a/samples/qa-virtualgridlistnative/src/views/MainView.module.less
+++ b/samples/qa-virtualgridlistnative/src/views/MainView.module.less
@@ -8,7 +8,6 @@ body {
 
 .mainView {
 	display: flex;
-	flex-direction: column;
 	height: 100%;
 }
 
@@ -16,7 +15,7 @@ body {
 	display: flex;
 	padding-top: 12px;
 	box-sizing: border-box;
-	border: solid glay 10px;
+	border: solid gray 10px;
 	width: 100%;
 	height: 75%;
 }
