--- a/samples/qa-virtualgridlist/src/views/MainView.module.less
+++ b/samples/qa-virtualgridlist/src/views/MainView.module.less
@@ -16,7 +16,7 @@ body {
 	display: flex;
 	padding-top: 12px;
 	box-sizing: border-box;
-	border: solid glay 10px;
+	border: solid gray 10px;
 	width: 100%;
 	height: 100%;
 }
