--- a/samples/sampler/src/MoonstoneEnvironment/MoonstoneEnvironment.module.less
+++ b/samples/sampler/src/MoonstoneEnvironment/MoonstoneEnvironment.module.less
@@ -109,3 +109,9 @@ body {
 	height: 100%;
 	position: relative !important;
 }
+
+// This is used for android phones to have a buffer on the panel so that the VKB
+// does not cover the expandableInput in qa-sampler (100px per expandableInput)
+.panelsAndroid {
+	height: calc(100% + 200px);
+}
