--- a/Panels/Panels.module.less
+++ b/Panels/Panels.module.less
@@ -140,3 +140,8 @@
 		}
 	});
 }
+
+// This is used for android phones to have a buffer on the panel so that the VKB does not cover other elements
+.panelsAndroid{
+	height: calc(100% + 300px);
+}
