--- a/TooltipDecorator/Tooltip.module.less
+++ b/TooltipDecorator/Tooltip.module.less
@@ -6,12 +6,12 @@
 
 .tail (@edge, @point) {
 	background-image:
-		linear-gradient(to @edge, @moon-tooltip-border-color @moon-tooltip-border-width, transparent @moon-tooltip-border-width), // Edge line
-		linear-gradient(to @point @edge, @moon-tooltip-bg-color 50%, @moon-tooltip-border-color 50%, @moon-tooltip-border-color ~"calc(50% + 1px)", transparent ~"calc(50% + 1px)"); // Diagonal line + fill
+		linear-gradient(to @edge, @moon-tooltip-border-color @moon-tooltip-border-width/2, transparent @moon-tooltip-border-width), // Edge line
+		linear-gradient(to @point @edge, @moon-tooltip-bg-color 50%, @moon-tooltip-border-color ~"calc(50% + 0.5px)", @moon-tooltip-border-color ~"calc(50% + 1px)", transparent ~"calc(50% + 1px)"); // Diagonal line + fill
 }
 .centerTail (@edge, @point) {
 	background-image:
-		linear-gradient(to @point @edge, @moon-tooltip-bg-color 50%, @moon-tooltip-border-color 50%, @moon-tooltip-border-color ~"calc(50% + 1px)", transparent ~"calc(50% + 1px)"); // Diagonal line + fill
+		linear-gradient(to @point @edge, @moon-tooltip-bg-color 50%, @moon-tooltip-border-color ~"calc(50% + 0.5px)", @moon-tooltip-border-color ~"calc(50% + 1px)", transparent ~"calc(50% + 1px)"); // Diagonal line + fill
 }
 
 .tooltip {
@@ -86,7 +86,7 @@
 	// Positioning for the arrow and label
 	&.below {
 		.tooltipArrow {
-			top: (1px + @moon-tooltip-offset);
+			top: (1.5px + @moon-tooltip-offset);
 		}
 
 		.tooltipLabel {
@@ -161,7 +161,7 @@
 
 	&.left {
 		.tooltipArrow {
-			right: (1px + @moon-tooltip-offset);
+			right: (2px + @moon-tooltip-offset);
 		}
 
 		.tooltipLabel {
@@ -180,7 +180,7 @@
 
 		&.middleArrow {
 			.tooltipArrow {
-				right: (1.5px + @moon-tooltip-offset);
+				right: (2px + @moon-tooltip-offset);
 			}
 		}
 
@@ -193,7 +193,7 @@
 
 	&.right {
 		.tooltipArrow {
-			left: (1px + @moon-tooltip-offset);
+			left: (1.5px + @moon-tooltip-offset);
 		}
 
 		.tooltipLabel {
