fixed input small line-height so that input text is vertically centered

--- a/Input/Input.module.less
+++ b/Input/Input.module.less
@@ -94,6 +94,7 @@
 		.input {
 			font-size: @moon-input-small-font-size;
 			height: @moon-input-small-height;
+			line-height: @moon-input-small-height;
 		}
 
 		.inputHighlight {
