update the syntax for less 4

--- a/Spinner/Spinner.module.less
+++ b/Spinner/Spinner.module.less
@@ -5,7 +5,7 @@
 @import "../styles/skin.less";
 
 @keyframes spin {
-	@turn-offset: 2 / 8;
+	@turn-offset: (2 / 8);
 	0%   { transform: rotate(0turn + @turn-offset); }
 	33%   { transform: rotate(0.25turn + @turn-offset); }
 	80%   { transform: rotate(0.7turn + @turn-offset); }
