WRO-608: Replace 'className' config to css for ui/MarqueeDecorator Enact-DCO-1.0-Signed-off-by: Jeonghee Ahn (jeonghee27.ahn@lge.com)

--- a/SlotItem/SlotItem.module.less
+++ b/SlotItem/SlotItem.module.less
@@ -12,7 +12,7 @@
 
 .slotItem {
 	// Apply to the marquee content area to tell it to expand to the available width of the container
-	.content {
+	.marquee {
 		flex: 1 1 auto;
 	}
 
