--- a/ToggleItem/ToggleItem.module.less
+++ b/ToggleItem/ToggleItem.module.less
@@ -1,6 +1,6 @@
 .toggleItem {
 	// Apply to the marquee content area to tell it to expand to the available width of the container
-	.content {
+	.marquee {
 		flex: 1 1 auto;
 	}
 	.slot {
