WRO-11368: Fix `Slider` to have proper padding
Enact-DCO-1.0-Signed-off-by: Seungcheon Baek (sc.baek@lge.com)

--- a/Slider/Slider.module.less
+++ b/Slider/Slider.module.less
@@ -61,7 +61,7 @@
 
 	&.horizontal {
 		@h-gap: (@moon-slider-knob-width / 2);
-		@v-gap: (@moon-slider-knob-height - @moon-slider-bar-height) / 2;
+		@v-gap: ((@moon-slider-knob-height - @moon-slider-bar-height) / 2);
 		width: auto;
 		padding: @v-gap @h-gap;
 
