changes based on code review

--- a/internal/ui/IconButton/IconButton.module.less
+++ b/internal/ui/IconButton/IconButton.module.less
@@ -1,6 +1,6 @@
 // IconButton.module.less
 //
-@import '../../styles/internal/mixins';
+@import '../../../styles/internal/ui/mixins';
 
 .iconButton {
 	.border-box();
