--- a/TooltipDecorator/Tooltip.module.less
+++ b/TooltipDecorator/Tooltip.module.less
@@ -6,7 +6,7 @@
 
 .tail (@edge, @point) {
 	background-image:
-		linear-gradient(to @edge, @moon-tooltip-border-color @moon-tooltip-border-width/2, transparent @moon-tooltip-border-width), // Edge line
+		linear-gradient(to @edge, @moon-tooltip-border-color (@moon-tooltip-border-width/2), transparent @moon-tooltip-border-width), // Edge line
 		linear-gradient(to @point @edge, @moon-tooltip-bg-color 50%, @moon-tooltip-border-color ~"calc(50% + 0.5px)", @moon-tooltip-border-color ~"calc(50% + 1px)", transparent ~"calc(50% + 1px)"); // Diagonal line + fill
 }
 .centerTail (@edge, @point) {
