--- a/ui/IconButton/IconButton.module.less
+++ b/ui/IconButton/IconButton.module.less
@@ -1,6 +1,6 @@
 // IconButton.module.less
 //
-@import '../../../styles/internal/ui/mixins';
+@import '../../../styles/ui/mixins';
 
 .iconButton {
 	.border-box();
