code review fixes

--- a/ui/IconButton/IconButton.module.less
+++ b/ui/IconButton/IconButton.module.less
@@ -1,6 +1,6 @@
 // IconButton.module.less
 //
-@import '../../styles/ui/mixins';
+@import '@enact/ui/styles/mixins';
 
 .iconButton {
 	.border-box();
