--- a/ui/IconButton/IconButton.module.less
+++ b/ui/IconButton/IconButton.module.less
@@ -1,6 +1,6 @@
 // IconButton.module.less
 //
-@import '@enact/ui/styles/mixins';
+@import '~@enact/ui/styles/mixins.less';
 
 .iconButton {
 	.border-box();
