test failing ss tests with webdriverio v8

--- a/Button/Button.module.less
+++ b/Button/Button.module.less
@@ -52,7 +52,7 @@
 	});
 
 	.bg {
-		background-color: inherit;
+		background-color: red;
 		border-width: @moon-button-border-width;
 		border-style: solid;
 		border-radius: @moon-button-border-radius;
