--- a/Item/Item.module.less
+++ b/Item/Item.module.less
@@ -16,7 +16,7 @@
 	});
 
 	.moon-custom-text({
-		font-size: @moon-item-font-size-large;
+		font-size: 27px;
 		line-height: @moon-item-line-height-large;
 
 		.moon-locale-non-latin({
